# opencode-router

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: test.yml
contrib/agentskillos/: README.md  install.sh
contrib/agentskillos/router_engine/: engine.py
docs/: architecture.md  configuration.md  creating-agents.md  faq.md  installation.md  profiles.md  routing-rules.md  v0.3.0-plan.md
examples/agents/: README.md  code-reviewer.md  content-writer.md
examples/profiles/: starter-profile.json
examples/router-prompts/: default.md
scripts/: import-agents.sh
src/opencode_router/: __init__.py  __main__.py  agents.py  cli.py  index.py  ollama.py  opencode.py  orchestrate.py  paths.py  profile.py  route.py  rules.py
src/opencode_router/memory/: __init__.py  anatomy.py  conventions.py  episodic.py  log.py  retrieval.py  storage.py  trigger.py  walk.py
tests/: test_agents.py  test_index.py  test_memory_anatomy.py  test_memory_conventions.py  test_memory_episodic.py  test_memory_init.py  test_memory_log.py  test_memory_retrieval.py  test_memory_storage.py  test_memory_trigger.py  test_memory_walk.py  test_profile.py  test_rules.py
